docs/api/qiskit/0.25/qiskit.transpiler.passes.CheckGateDirection.mdx
---
title: CheckGateDirection
description: API reference for qiskit.transpiler.passes.CheckGateDirection
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CheckGateDirection
---

# qiskit.transpiler.passes.CheckGateDirection

<Class id="qiskit.transpiler.passes.CheckGateDirection" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/transpiler/passes/utils/check_gate_direction.py" signature="CheckGateDirection(*args, **kwargs)">
  Check if the two-qubit gates follow the right direction with respect to the coupling map.

  CheckGateDirection initializer.

  **Parameters**

  **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) – Directed graph representing a coupling map.

  ### \_\_init\_\_

  <Function id="qiskit.transpiler.passes.CheckGateDirection.__init__" name="__init__" signature="__init__(coupling_map)">
    CheckGateDirection initializer.

    **Parameters**

    **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) – Directed graph representing a coupling map.
  </Function>

  ## Methods

  |                                                                                                                                           |                                         |
  | ----------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------- |
  | [`__init__`](#qiskit.transpiler.passes.CheckGateDirection.__init__ "qiskit.transpiler.passes.CheckGateDirection.__init__")(coupling\_map) | CheckGateDirection initializer.         |
  | [`name`](#qiskit.transpiler.passes.CheckGateDirection.name "qiskit.transpiler.passes.CheckGateDirection.name")()                          | Return the name of the pass.            |
  | [`run`](#qiskit.transpiler.passes.CheckGateDirection.run "qiskit.transpiler.passes.CheckGateDirection.run")(dag)                          | Run the CheckGateDirection pass on dag. |

  ## Attributes

  |                                                                                                                                                                      |                                             |
  | -------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------- |
  | [`is_analysis_pass`](#qiskit.transpiler.passes.CheckGateDirection.is_analysis_pass "qiskit.transpiler.passes.CheckGateDirection.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
  | [`is_transformation_pass`](#qiskit.transpiler.passes.CheckGateDirection.is_transformation_pass "qiskit.transpiler.passes.CheckGateDirection.is_transformation_pass") | Check if the pass is a transformation pass. |

  ### is\_analysis\_pass

  <Function id="qiskit.transpiler.passes.CheckGateDirection.is_analysis_pass" name="is_analysis_pass" signature="property is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Function>

  ### is\_transformation\_pass

  <Function id="qiskit.transpiler.passes.CheckGateDirection.is_transformation_pass" name="is_transformation_pass" signature="property is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.CheckGateDirection.name" name="name" signature="name()">
    Return the name of the pass.
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.CheckGateDirection.run" name="run" signature="run(dag)">
    Run the CheckGateDirection pass on dag.

    If dag is mapped and the direction is correct the property is\_direction\_mapped is set to True (or to False otherwise).

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to check.
  </Function>
</Class>

