docs/api/qiskit/0.33/qiskit.transpiler.passes.CheckGateDirection.mdx
---
title: CheckGateDirection (v0.33)
description: API reference for qiskit.transpiler.passes.CheckGateDirection in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CheckGateDirection
---

# CheckGateDirection

<Class id="qiskit.transpiler.passes.CheckGateDirection" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/passes/utils/check_gate_direction.py" signature="CheckGateDirection(*args, **kwargs)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.AnalysisPass`

  Check if the two-qubit gates follow the right direction with respect to the coupling map.

  CheckGateDirection initializer.

  **Parameters**

  *   **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) – Directed graph representing a coupling map.
  *   **target** ([*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")) – The backend target to use for this pass. If this is specified it will be used instead of the coupling map

  ## Methods

  <span id="qiskit-transpiler-passes-checkgatedirection-name" />

  ### name

  <Function id="qiskit.transpiler.passes.CheckGateDirection.name" signature="CheckGateDirection.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-checkgatedirection-run" />

  ### run

  <Function id="qiskit.transpiler.passes.CheckGateDirection.run" signature="CheckGateDirection.run(dag)">
    Run the CheckGateDirection pass on dag.

    If dag is mapped and the direction is correct the property is\_direction\_mapped is set to True (or to False otherwise).

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to check.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.CheckGateDirection.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.CheckGateDirection.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

